# darknet

./: .gitignore  CMakeLists.txt  Makefile
cfg/: jl.cfg  jl.data
client/: demo_client.py
client/rpc/: darknet_pb2.py  darknet_pb2_grpc.py
config/: run.config.json
config/cfg/: jl.cfg  jl.data
examples/: darknet.c  detector.c
include/: darknet.h
scripts/: darknet.run.sh  jl_label.py
source/include/: darknet.h  data_struct.h  server.h
source/main/: darknet.c  darknet.cpp  server.cpp
source/neutral/: activation_kernels.cu  activation_layer.cpp  avgpool_layer.cpp  avgpool_layer_kernels.cu  batchnorm_layer.cpp  blas.h  blas_kernels.cu  box.h  col2im_kernels.cu  compare.cpp  connected_layer.cpp  connected_layer.h  convolutional_kernels.cu  convolutional_layer.cpp  convolutional_layer.h  cost_layer.cpp  crop_layer.cpp  crop_layer_kernels.cu  cuda.cpp  cuda.h  data.h  deconvolutional_kernels.cu  deconvolutional_layer.cpp  detection_layer.cpp  dropout_layer.cpp  dropout_layer_kernels.cu  gemm.cpp  gru_layer.cpp  im2col_kernels.cu  image.cpp  image.h  list.h  local_layer.cpp  matrix.h  maxpool_layer.cpp  maxpool_layer_kernels.cu  network.c  network.cpp  network.h  network_kernels.cu  (+13 more)
source/protos/: compile.sh  darknet.proto
source/rpc/: darknet.grpc.pb.cc  darknet.grpc.pb.h  darknet.pb.cc  darknet.pb.h
source/src/: activation_layer.c  data.c  deconvolutional_layer.c  detection_layer.c  region_layer.c  route_layer.c
source/utils/: lgy_utils.cpp  lgy_utils.h  utils.cpp  utils.h
src/: avgpool_layer.c  batchnorm_layer.c  box.c  compare.c  connected_layer.c  convolutional_layer.c  cost_layer.c  gemm.c  gru_layer.c  image.c  list.c  local_layer.c  matrix.c  maxpool_layer.c  network.c  parser.c  reorg_layer.c  softmax_layer.c
